# Mcop

./: How to  Makefile  README.md  changelog  configure.in
include/: mcop.h  tree.h
mcop/: compress.c  mcop.c  tree.c  util.c
